update bg and links

--- a/index.html
+++ b/index.html
@@ -9,21 +9,64 @@
 </head>
 
 <body
-  class="bg-[url('https://3.bp.blogspot.com/-0KJOP3vdh4M/XWJH1gASnPI/AAAAAAAALsc/YNfeWJTiYtMdJjyAymN20R8sosP_QdigwCLcBGAs/w919/abstract-digital-art-uhdpaper.com-4K-4.295-wp.thumbnail.jpg')] bg-no-repeat bg-cover bg-center h-screen p-8 flex flex-col justify-center items-center">
+  class="bg-[url('https://wallpapercave.com/wp/XiCvTnp.jpg')] bg-no-repeat bg-cover bg-center h-screen p-8 flex flex-col justify-center items-center">
+ 
 
   <div
     class="w-full max-w-2xl flex flex-col h-full p-4 mx-auto text-white bg-gray-600 rounded-sm bg-opacity-20 backdrop-blur-sm max-h-[40rem]">
     <h1 class="text-3xl font-thin text-center">Cesar Monroy</h1>
     <h2 class="text-xl text-center uppercase font-extralight">QA Automation</h2>
     <div class="w-40 mt-2 mx-auto h-[0.5px] bg-white"></div>
-    <div class="flex flex-col justify-center h-full gap-4 p-4 item-center">
-      <a class="link-primary" href="#">Link</a>
-      <a class="link-primary" href="#">Link</a>
-      <a class="link-primary" href="#">Link</a>
-      <a class="link-primary" href="#">Link</a>
+    <div class="flex flex-col justify-center h-full gap-2 p-2 item-center">
+      <h2 class="text-xl text-center uppercase font-extralight">Frameworks para pruebas</h2>
+      <table>
+        <td class="font-thin">karate-framework</td>
+        <td>  
+          <a href="https://github.com/cexarmonroy/karate-framework"><svg class="text-gray-50" width="24" height="24" viewBox="0 0 24 24" fill="none" 
+          xmlns="http://www.w3.org/2000/svg">
+          <path d="M6.3414 6.15897C7.16507 3.73597 9.38755 2 12 2C15.3137 2 18 4.79305 18 8.23846C20.2091 8.23846 22 10.1005 22 12.3974C22 13.9368 21.1956 15.2809 20 16M6.32069 6.20644C3.8806 6.55106 2 8.72597 2 11.3576C2 13.0582 2.7854 14.5682 3.99965 15.5167"
+           stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+           <path d="M8 18L12 22M12 22L16 18M12 22V12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+          </svg>
+        </a>
+      </td> 
+      <tr></tr>
+      <td class="font-thin">screenplay-serenity-framework</td>
+      <td>  
+        <a href="#"><svg class="text-gray-50" width="24" height="24" viewBox="0 0 24 24" fill="none" 
+        xmlns="http://www.w3.org/2000/svg">
+        <path d="M6.3414 6.15897C7.16507 3.73597 9.38755 2 12 2C15.3137 2 18 4.79305 18 8.23846C20.2091 8.23846 22 10.1005 22 12.3974C22 13.9368 21.1956 15.2809 20 16M6.32069 6.20644C3.8806 6.55106 2 8.72597 2 11.3576C2 13.0582 2.7854 14.5682 3.99965 15.5167"
+         stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+         <path d="M8 18L12 22M12 22L16 18M12 22V12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+        </svg>
+      </a>
+    </td> 
+    <tr></tr>
+    <td class="font-thin">selenium-cucumber-framework</td>
+    <td>  
+      <a href="#"><svg class="text-gray-50" width="24" height="24" viewBox="0 0 24 24" fill="none" 
+      xmlns="http://www.w3.org/2000/svg">
+      <path d="M6.3414 6.15897C7.16507 3.73597 9.38755 2 12 2C15.3137 2 18 4.79305 18 8.23846C20.2091 8.23846 22 10.1005 22 12.3974C22 13.9368 21.1956 15.2809 20 16M6.32069 6.20644C3.8806 6.55106 2 8.72597 2 11.3576C2 13.0582 2.7854 14.5682 3.99965 15.5167"
+       stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+       <path d="M8 18L12 22M12 22L16 18M12 22V12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+      </svg>
+    </a>
+  </td> 
+  <tr></tr>
+  <td class="font-thin">restassured-framework</td>
+  <td>  
+    <a href="#"><svg class="text-gray-50" width="24" height="24" viewBox="0 0 24 24" fill="none" 
+    xmlns="http://www.w3.org/2000/svg">
+    <path d="M6.3414 6.15897C7.16507 3.73597 9.38755 2 12 2C15.3137 2 18 4.79305 18 8.23846C20.2091 8.23846 22 10.1005 22 12.3974C22 13.9368 21.1956 15.2809 20 16M6.32069 6.20644C3.8806 6.55106 2 8.72597 2 11.3576C2 13.0582 2.7854 14.5682 3.99965 15.5167"
+     stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+     <path d="M8 18L12 22M12 22L16 18M12 22V12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+    </svg>
+  </a>
+</td> 
+  </table>
     </div>
     <div class="flex justify-center gap-6 p-4">
-      <a href="#facebook">
+      <a href="https://www.facebook.com/cexar">
         <svg class="text-gray-50" width="24" height="24" viewBox="0 0 24 24" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <path
@@ -31,7 +74,7 @@
             stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
         </svg>
       </a>
-      <a href="#Twitter">
+      <a href="https://twitter.com/diversiondj">
         <svg class="text-gray-50" width="24" height="24" viewBox="0 0 24 24" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <path
@@ -39,7 +82,7 @@
             stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
         </svg>
       </a>
-      <a href="#Instagram">
+      <a href="https://www.instagram.com/diversiondj/">
         <svg class="text-gray-50" width="24" height="24" viewBox="0 0 24 24" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <path
